# ai-code-assistent

./: .editorconfig  .env.local  .gitignore  AGENTS.md  ARCHITECTURE.md  ARTICLE.md  PROJECT_STRUCTURE.md  README.md  ai-code-assistant-course.pptx  pyproject.toml
.agent/plans/: action-module.md  context-module.md  llm-response-middleware.md  task-module.md
docs/: middleware-for-ai-agents.md
docs/articles/: middleware-for-ai-agents.md
readme_imgs/: architecture-diag.txt  sequence-diagram.txt
src/: main.py
src/core/: middleware.py  setup.py
src/core/action/: __init__.py  action_handler.py  action_handler_middleware.py  action_maps.py  actions.py  actions_result.py  handler_interface.py  middleware.py  parser.py
src/core/agent/: __init__.py  action_handler.py  actions_result.py  agent.py  agent_manager.py  agent_report.py  subagent.py  subagent_report.py  subagent_task.py  turn_middleware.py
src/core/backend/: __init__.py  command_env_executor.py
src/core/bash/: __init__.py  bash_handler.py  bash_handlers.py  factory.py  search_handlers.py  search_manager.py
src/ext/: audit_logging.py  error_recovery.py  output_truncation.py  subagent_report.py  subagent_task_bootstrap.py  subagent_turn_completion.py  tracing.py
src/misc/: __init__.py  pretty_logger.py  turn_logger.py
src/system_msgs/: system_msg_loader.py
test/: main_mock.py  real_advanced_task.py  real_advanced_task_mock.py  real_simple_task.py  test_action_middleware.py  test_action_parser.py  test_individual_handlers.py  test_middleware.py  test_subagent_real.py  test_turn_middleware.py
(+51 files in other folders)
